--- a/CSS/card.css
+++ b/CSS/card.css
@@ -1,4 +1,5 @@
 #bg_transparente{
+    display: none;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.8);
     width: 100vw;
@@ -9,7 +10,7 @@
 
 #container{
     background-color: rgb(112, 36, 17);;
-    box-shadow: 2px 2px 20px white;
+    box-shadow: 0px 0px 20px white;
     margin: 60px;
     margin-top: 200px;
     margin-left: 330px;
@@ -31,11 +32,18 @@
     padding: 10px;
     border-radius: 10px;
     margin-left: 90px;
-    margin-top: 20px;
+    margin-top: 30px;
+    box-shadow: 0px 0px 8px white;
 }
 
+#container>form>input:focus{
+    box-shadow: 0px 0px 20px rgb(218, 117, 22);
+}
+
+
+
 #container>form>input::placeholder{
-    color: rgb(146, 146, 146);
+    color: rgb(165, 164, 164);
 }
 
 #enviar{
